stophotdeploy.jar